--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <!-- API Info -->
     <div class="space-y-8 mt-10">
       <section>
-        <h2 class="text-2xl font-semibold text-green-700 dark:text-green-300 mb-2">📌 Districts</h2>
+        <h2 class="text-2xl font-semibold text-green-700 dark:text-green-300 mb-2">Districts</h2>
         <ul class="space-y-2">
           <li><code class="px-2 py-1 bg-gray-200 dark:bg-gray-700 rounded">GET /api/mwinfo/districts/</code></li>
           <li><code class="px-2 py-1 bg-gray-200 dark:bg-gray-700 rounded">GET /api/mwinfo/districts/Lilongwe/</code></li>
         </ul>
       </section>
       <section>
-        <h2 class="text-2xl font-semibold text-yellow-700 dark:text-yellow-300 mb-2">Agriculture & Fish</h2>
+        <h2 class="text-2xl font-semibold text-yellow-700 dark:text-yellow-300 mb-2">Agriculture</h2>
         <ul>
           <li><code class="px-2 py-1 bg-gray-200 dark:bg-gray-700 rounded">GET /api/agriinfo/query/?name=Nsima</code></li>
         </ul>
