--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Toggle Dark Mode
       </button>
     </div>
-    <p class="text-lg mb-8">Explore Malawi’s districts, agriculture, and currency endpoints live!</p>
+    <p class="text-lg mb-8">Explore Malawi’s info endpoints live!</p>  
 
     <!-- Interactive Endpoint Section -->
     <section>
