--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" class="light">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Malawi Info API</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
-      darkMode: ['class'],    
+      darkMode: ['class'],
       theme: {
         extend: {
           animation: {
-            'spin-slow': 'spin 6s linear infinite',
-            'fade-out': 'fadeOut 1s ease-in-out forwards'
+            'fade-out': 'fadeOut 1s ease-in-out forwards',
           },
           keyframes: {
             fadeOut: {
@@ -25,8 +24,8 @@
     }
   </script>
   <style>
-    .rotate-y-3d {
-      transform: perspective(800px) rotateY(25deg);
+    .perspective-3d {
+      transform: perspective(1000px);
     }
   </style>
 </head>
@@ -34,8 +33,8 @@
 
   <!-- Splash Screen -->
   <div id="splashScreen" class="fixed inset-0 z-50 flex items-center justify-center bg-gradient-to-br from-blue-700 via-purple-700 to-pink-700 text-white">
-    <div class="text-center animate-spin-slow">
-      <h1 class="text-5xl font-bold rotate-y-3d">🌍 Malawi Info API</h1>
+    <div class="text-center perspective-3d">
+      <h1 class="text-6xl font-extrabold tracking-widest">INFO-MW</h1>
       <p class="mt-4 text-lg">Loading Malawi insights...</p>
     </div>
   </div>
@@ -90,12 +89,12 @@
       <p>Built & maintained by <strong>Tuntufye Mwanyongo</strong></p>
       <a href="mailto:tuntufye@gmail.com" class="text-blue-500 dark:text-blue-300 underline">📧 Email</a>
       <a href="https://github.com/Tuntufye4" target="_blank" class="inline-flex items-center ml-4 text-gray-700 dark:text-gray-300 hover:text-black">
-        <svg class="w-5 h-5 mr-1 fill-current" viewBox="0 0 24 24"><path d="…"/></svg> GitHub
+        <svg class="w-5 h-5 mr-1 fill-current" viewBox="0 0 24 24"><path d="..."/></svg> GitHub
       </a>
     </footer>
   </div>
 
-  <!-- JS -->
+  <!-- JavaScript -->
   <script>
     const runBtn = document.getElementById('runBtn');
     const copyBtn = document.getElementById('copyBtn');
