--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   </div>
 
   <!-- Header -->
-  <header class="bg-blue-600 text-white px-6 py-4">
+  <header class="bg-grey-600 text-white px-6 py-4">  
     <div class="max-w-4xl mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Malawi Info</h1>
+      <h1 class="text-2xl font-bold">Malawi Info</h1>  
       <nav class="space-x-4">
-        <button onclick="showSection('welcome')" class="nav-btn">Welcome</button>
+        <button onclick="showSection('home')" class="nav-btn">Home</button>
         <button onclick="showSection('api')" class="nav-btn">API</button>
         <button onclick="showSection('library')" class="nav-btn">Library</button>
         <button id="themeToggle" class="ml-6 px-3 py-1 bg-gray-200 dark:bg-gray-700 rounded text-gray-800 dark:text-gray-200">Toggle Dark Mode</button>
