--- a/sections/welcome.html
+++ b/sections/welcome.html
@@ -7,6 +7,6 @@
     <li><strong>API</strong> – RESTful access to health, agriculture, currency, demographics, and district info.</li>
     <li><strong>Library</strong> – A Python package with structured data for programmatic use.</li>
   </ul>
-  <p>Use the navigation above to explore either the live API or the Python library documentation.</p>
+  <p>Explore either the live API or the Python library documentation.</p>
 </section>
       
