--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <!-- Header -->
-  <header class="bg-grey-600 text-white px-6 py-4">  
+  <header class="bg-black-600 text-white px-6 py-4">  
     <div class="max-w-4xl mx-auto flex justify-between items-center">
       <h1 class="text-2xl font-bold">Malawi Info</h1>  
       <nav class="space-x-4">
