--- a/sections/welcome.html
+++ b/sections/welcome.html
@@ -1,7 +1,7 @@
 <section class="prose max-w-none dark:prose-invert">
   <h2 class="text-3xl font-bold mb-6">Welcome to Malawi Info</h2>
   <p class="text-lg mb-4">
-    This project provides two key resources to help you explore Malawi’s data:
+    This site provides two key resources to help you explore Malawi’s data:
   </p>
   <ul class="list-disc list-inside mb-4">
     <li><strong>API</strong> – RESTful access to health, agriculture, currency, demographics, and district info.</li>
